src/compositor/compositor.c
@@ -452,7 +452,7 @@ meta_check_end_modal (MetaScreen *screen)
     }
 }
 
-static void
+static gboolean
 after_stage_paint (gpointer data)
 {
   MetaCompScreen *info = (MetaCompScreen*) data;
@@ -460,6 +460,8 @@ after_stage_paint (gpointer data)
 
   for (l = info->windows; l; l = l->next)
     meta_window_actor_post_paint (l->data);
+
+  return TRUE;
 }
 
 void
@@ -533,7 +535,7 @@ meta_compositor_manage_screen (MetaCompositor *compositor,
   info->stage = clutter_stage_new ();
 
   clutter_threads_add_repaint_func_full (CLUTTER_REPAINT_FLAGS_POST_PAINT,
-                                         (GSourceFunc) after_stage_paint,
+                                         after_stage_paint,
                                          info, NULL);
 
   clutter_stage_set_sync_delay (CLUTTER_STAGE (info->stage), META_SYNC_DELAY);
